; ModuleID = '/home/carl/AnghaBench/fastdfs/storage/extr_storage_service.c_fdfs_stat_file_sync_func.c'
source_filename = "/home/carl/AnghaBench/fastdfs/storage/extr_storage_service.c_fdfs_stat_file_sync_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@last_stat_change_count = common dso_local global i64 0, align 8
@g_stat_change_count = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fdfs_stat_file_sync_func(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %5 = load i64, i64* @last_stat_change_count, align 8
  %6 = load i64, i64* @g_stat_change_count, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = call i32 (...) @storage_write_to_stat_file()
  store i32 %9, i32* %4, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %8
  %12 = load i64, i64* @g_stat_change_count, align 8
  store i64 %12, i64* @last_stat_change_count, align 8
  br label %13

13:                                               ; preds = %11, %8
  %14 = load i32, i32* %4, align 4
  store i32 %14, i32* %2, align 4
  br label %16

15:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %15, %13
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @storage_write_to_stat_file(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
